--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -213,7 +213,7 @@
        "[2375 rows x 6 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "Name: ride_id, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "Name: driver_count, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,25 +387,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#  6. Create a PyBer summary DataFrame. \n",
-    "d = {\"Total Rides\": ride_total_city_type, \n",
+    "pyber_summary_df = pd.DataFrame({\"Total Rides\": ride_total_city_type, \n",
     "          \"Total Drivers\": driver_total_city_type, \n",
     "          \"Total Fares\": fare_total_city_type,\n",
     "          \"Average Fare per Ride\": avg_fare_per_ride, \n",
-    "          \"Average Fare per Driver\": avg_fare_per_driver}\n",
-    "\n",
-    "pyber_summary_df = pd.DataFrame(data=d)\n",
-    "          \n",
-    "          "
+    "          \"Average Fare per Driver\": avg_fare_per_driver}) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -434,6 +430,14 @@
        "      <th>Total Fares</th>\n",
        "      <th>Average Fare per Ride</th>\n",
        "      <th>Average Fare per Driver</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -467,17 +471,19 @@
       ],
       "text/plain": [
        "          Total Rides  Total Drivers  Total Fares  Average Fare per Ride  \\\n",
+       "type                                                                       \n",
        "Rural             125             78      4327.93              34.623440   \n",
        "Suburban          625            490     19356.33              30.970128   \n",
        "Urban            1625           2405     39854.38              24.525772   \n",
        "\n",
        "          Average Fare per Driver  \n",
+       "type                               \n",
        "Rural                   55.486282  \n",
        "Suburban                39.502714  \n",
        "Urban                   16.571468  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +576,7 @@
        "Urban                     $16.57  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,75 +598,373 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Read the merged DataFrame\n",
-    "type_date = pyber_data_df[['type','date']]\n",
-    "type_date.head()\n",
-    "\n",
-    "\n",
-    "#.sum()[\"fare\"]\n"
+    "# 1. Read the merged DataFrame\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>fare</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>type</th>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Rural</th>\n",
+       "      <th>2019-01-01 09:45:36</th>\n",
+       "      <td>43.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-02 11:18:32</th>\n",
+       "      <td>52.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-03 19:51:01</th>\n",
+       "      <td>19.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-04 03:31:26</th>\n",
+       "      <td>24.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-06 07:38:40</th>\n",
+       "      <td>47.33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            fare\n",
+       "type  date                      \n",
+       "Rural 2019-01-01 09:45:36  43.69\n",
+       "      2019-01-02 11:18:32  52.12\n",
+       "      2019-01-03 19:51:01  19.90\n",
+       "      2019-01-04 03:31:26  24.88\n",
+       "      2019-01-06 07:38:40  47.33"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 2. Using groupby() to create a new DataFrame showing the sum of the fares \n",
-    "#  for each date where the indices are the city type and date.\n"
+    "#  for each date where the indices are the city type and date.\n",
+    "type_date_total_fare = pyber_data_df.groupby(['type','date']).sum()[['fare']]\n",
+    "type_date_total_fare.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>date</th>\n",
+       "      <th>fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rural</td>\n",
+       "      <td>2019-01-01 09:45:36</td>\n",
+       "      <td>43.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Rural</td>\n",
+       "      <td>2019-01-02 11:18:32</td>\n",
+       "      <td>52.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Rural</td>\n",
+       "      <td>2019-01-03 19:51:01</td>\n",
+       "      <td>19.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Rural</td>\n",
+       "      <td>2019-01-04 03:31:26</td>\n",
+       "      <td>24.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Rural</td>\n",
+       "      <td>2019-01-06 07:38:40</td>\n",
+       "      <td>47.33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    type                 date   fare\n",
+       "0  Rural  2019-01-01 09:45:36  43.69\n",
+       "1  Rural  2019-01-02 11:18:32  52.12\n",
+       "2  Rural  2019-01-03 19:51:01  19.90\n",
+       "3  Rural  2019-01-04 03:31:26  24.88\n",
+       "4  Rural  2019-01-06 07:38:40  47.33"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 3. Reset the index on the DataFrame you created in #1. This is needed to use the 'pivot()' function.\n",
-    "# df = df.reset_index()\n"
+    "type_date_total_fare = type_date_total_fare.reset_index()\n",
+    "type_date_total_fare.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>type</th>\n",
+       "      <th>Rural</th>\n",
+       "      <th>Suburban</th>\n",
+       "      <th>Urban</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 00:08:16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 00:46:46</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>47.74</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 02:07:24</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24.07</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 03:46:50</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 05:23:21</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 09:45:36</th>\n",
+       "      <td>43.69</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 12:32:48</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25.56</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 14:40:14</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 14:42:25</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 14:52:06</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31.15</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "type                 Rural  Suburban  Urban\n",
+       "date                                       \n",
+       "2019-01-01 00:08:16    NaN       NaN  37.91\n",
+       "2019-01-01 00:46:46    NaN     47.74    NaN\n",
+       "2019-01-01 02:07:24    NaN     24.07    NaN\n",
+       "2019-01-01 03:46:50    NaN       NaN   7.57\n",
+       "2019-01-01 05:23:21    NaN       NaN  10.75\n",
+       "2019-01-01 09:45:36  43.69       NaN    NaN\n",
+       "2019-01-01 12:32:48    NaN     25.56    NaN\n",
+       "2019-01-01 14:40:14    NaN       NaN   5.42\n",
+       "2019-01-01 14:42:25    NaN       NaN  12.31\n",
+       "2019-01-01 14:52:06    NaN     31.15    NaN"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 4. Create a pivot table with the 'date' as the index, the columns ='type', and values='fare' \n",
-    "# to get the total fares for each type of city by the date. \n"
+    "# to get the total fares for each type of city by the date. \n",
+    "\n",
+    "type_date_total_fare_pivot = type_date_total_fare.pivot(index=\"date\", columns=\"type\", values='fare')\n",
+    "type_date_total_fare_pivot.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural         NaN\n",
+       "Suburban      NaN\n",
+       "Urban       37.91\n",
+       "Name: 2019-01-01 00:08:16, dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 5. Create a new DataFrame from the pivot table DataFrame using loc on the given dates, '2019-01-01':'2019-04-29'.\n",
-    "\n"
+    "type_date_total_fare__pv_date_range = type_date_total_fare_pivot.iloc[0]\n",
+    "type_date_total_fare__pv_date_range"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 6. Set the \"date\" index to datetime datatype. This is necessary to use the resample() method in Step 8.\n",
-    "# df.index = pd.to_datetime(df.index)"
+    "type_date_total_fare__pv_date_range.index = pd.to_datetime(type_date_total_fare__pv_date_range.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 2375 entries, 2019-01-01 00:08:16 to 2019-05-08 13:10:18\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   Rural     125 non-null    float64\n",
+      " 1   Suburban  625 non-null    float64\n",
+      " 2   Urban     1625 non-null   float64\n",
+      "dtypes: float64(3)\n",
+      "memory usage: 74.2 KB\n"
+     ]
+    }
+   ],
    "source": [
-    "# 7. Check that the datatype for the index is datetime using df.info()\n"
+    "# 7. Check that the datatype for the index is datetime using df.info()\n",
+    "type_date_total_fare__pv_date_range.info()"
    ]
   },
   {
