--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -906,33 +906,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>type</th>\n",
+       "      <th>Rural</th>\n",
+       "      <th>Suburban</th>\n",
+       "      <th>Urban</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 00:08:16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 00:46:46</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>47.74</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 02:07:24</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24.07</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 03:46:50</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 05:23:21</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-29 20:54:19</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>28.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-29 21:20:41</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-29 22:08:22</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25.75</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-29 23:05:04</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-29 23:10:18</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.39</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2218 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "type\n",
-       "Rural         NaN\n",
-       "Suburban      NaN\n",
-       "Urban       37.91\n",
-       "Name: 2019-01-01 00:08:16, dtype: float64"
+       "type                 Rural  Suburban  Urban\n",
+       "date                                       \n",
+       "2019-01-01 00:08:16    NaN       NaN  37.91\n",
+       "2019-01-01 00:46:46    NaN     47.74    NaN\n",
+       "2019-01-01 02:07:24    NaN     24.07    NaN\n",
+       "2019-01-01 03:46:50    NaN       NaN   7.57\n",
+       "2019-01-01 05:23:21    NaN       NaN  10.75\n",
+       "...                    ...       ...    ...\n",
+       "2019-04-29 20:54:19    NaN       NaN  28.41\n",
+       "2019-04-29 21:20:41    NaN       NaN  13.59\n",
+       "2019-04-29 22:08:22    NaN     25.75    NaN\n",
+       "2019-04-29 23:05:04    NaN       NaN  14.59\n",
+       "2019-04-29 23:10:18    NaN     29.39    NaN\n",
+       "\n",
+       "[2218 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 5. Create a new DataFrame from the pivot table DataFrame using loc on the given dates, '2019-01-01':'2019-04-29'.\n",
-    "type_date_total_fare__pv_date_range = type_date_total_fare_pivot.iloc[0]\n",
+    "type_date_total_fare__pv_date_range = type_date_total_fare_pivot.loc['2019-01-01':'2019-04-29']\n",
     "type_date_total_fare__pv_date_range"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -950,15 +1062,15 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "DatetimeIndex: 2375 entries, 2019-01-01 00:08:16 to 2019-05-08 13:10:18\n",
+      "DatetimeIndex: 2218 entries, 2019-01-01 00:08:16 to 2019-04-29 23:10:18\n",
       "Data columns (total 3 columns):\n",
       " #   Column    Non-Null Count  Dtype  \n",
       "---  ------    --------------  -----  \n",
-      " 0   Rural     125 non-null    float64\n",
-      " 1   Suburban  625 non-null    float64\n",
-      " 2   Urban     1625 non-null   float64\n",
+      " 0   Rural     116 non-null    float64\n",
+      " 1   Suburban  579 non-null    float64\n",
+      " 2   Urban     1523 non-null   float64\n",
       "dtypes: float64(3)\n",
-      "memory usage: 74.2 KB\n"
+      "memory usage: 69.3 KB\n"
      ]
     }
    ],
@@ -969,11 +1081,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>type</th>\n",
+       "      <th>Rural</th>\n",
+       "      <th>Suburban</th>\n",
+       "      <th>Urban</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-06</th>\n",
+       "      <td>187.92</td>\n",
+       "      <td>721.60</td>\n",
+       "      <td>1661.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-13</th>\n",
+       "      <td>67.65</td>\n",
+       "      <td>1105.13</td>\n",
+       "      <td>2050.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-20</th>\n",
+       "      <td>306.00</td>\n",
+       "      <td>1218.20</td>\n",
+       "      <td>1939.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-27</th>\n",
+       "      <td>179.69</td>\n",
+       "      <td>1203.28</td>\n",
+       "      <td>2129.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-02-03</th>\n",
+       "      <td>333.08</td>\n",
+       "      <td>1042.79</td>\n",
+       "      <td>2086.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-02-10</th>\n",
+       "      <td>115.80</td>\n",
+       "      <td>974.34</td>\n",
+       "      <td>2162.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-02-17</th>\n",
+       "      <td>95.82</td>\n",
+       "      <td>1045.50</td>\n",
+       "      <td>2235.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-02-24</th>\n",
+       "      <td>419.06</td>\n",
+       "      <td>1412.74</td>\n",
+       "      <td>2466.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-03</th>\n",
+       "      <td>175.14</td>\n",
+       "      <td>858.46</td>\n",
+       "      <td>2218.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-10</th>\n",
+       "      <td>303.94</td>\n",
+       "      <td>925.27</td>\n",
+       "      <td>2470.93</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "type         Rural  Suburban    Urban\n",
+       "date                                 \n",
+       "2019-01-06  187.92    721.60  1661.68\n",
+       "2019-01-13   67.65   1105.13  2050.43\n",
+       "2019-01-20  306.00   1218.20  1939.02\n",
+       "2019-01-27  179.69   1203.28  2129.51\n",
+       "2019-02-03  333.08   1042.79  2086.94\n",
+       "2019-02-10  115.80    974.34  2162.64\n",
+       "2019-02-17   95.82   1045.50  2235.07\n",
+       "2019-02-24  419.06   1412.74  2466.29\n",
+       "2019-03-03  175.14    858.46  2218.20\n",
+       "2019-03-10  303.94    925.27  2470.93"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 8. Create a new DataFrame using the \"resample()\" function by week 'W' and get the sum of the fares for each week.\n"
+    "# 8. Create a new DataFrame using the \"resample()\" function by week 'W' and get the sum of the fares for each week.\n",
+    "type_date_total_fare__pv_date_range_week = type_date_total_fare__pv_date_range.resample('W').sum()\n",
+    "type_date_total_fare__pv_date_range_week.head(10)"
    ]
   },
   {
